@@ -4,7 +4,6 @@
 
 package frc.robot;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -30,12 +29,10 @@ public class Constants {
         public static class Limelight {
                 public static final String LEFT_LOW = "limelight-leftlo";
                 public static final String RIGHT_LOW = "limelight-rightlo";
-                public static final List<String> LL3GS = Collections
-                                .unmodifiableList(Arrays.asList(LEFT_LOW, RIGHT_LOW));
+                public static final List<String> LL3GS = List.of(LEFT_LOW, RIGHT_LOW);
                 public static final String FRONT = "limelight-intake";
-                public static final List<String> LL3S = Collections.unmodifiableList(List.of(FRONT));
-                public static final List<String> LLS = Collections
-                                .unmodifiableList(Arrays.asList(LEFT_LOW, RIGHT_LOW, FRONT));
+                public static final List<String> LL3S = List.of(FRONT);
+                public static final List<String> LLS = List.of(LEFT_LOW, RIGHT_LOW, FRONT);
         }
 
         public static class Photon {
